<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".LoadingActivity">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faraja"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="sans-serif"
        />

    <ImageView
        android:id="@+id/appImage"
        android:layout_width="278dp"
        android:layout_height="209dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/email_verification"
        app:layout_constraintBottom_toTopOf="@+id/loadingTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName" />

    <TextView
        android:id="@+id/loadingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/awaiting_email_verification"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/appImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
    />

    <Button
        android:id="@+id/proceedToLoginButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/proceed_to_login"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/loadingTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/edittext_border"
        android:backgroundTint="@color/purple_100"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
